tests/src/frontend/syntax/invalid/empty_tuple_type.sk
fun f(): () {
  void
}

fun main(): void {
  _ = f();
}
